Added logic for pushing up to database, more changes to intake program.

--- a/C#/CodeBlackFinance/CodeBlackFinanceTests/CodeBlackFinanceTests.csproj
+++ b/C#/CodeBlackFinance/CodeBlackFinanceTests/CodeBlackFinanceTests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CBAccountIntake\CBAccountIntake.csproj" />
     <ProjectReference Include="..\CodeBlackFinance\CodeBlackFinance.csproj" />
   </ItemGroup>
 
